--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <title>Etch-a-Sketch</title>
     <link href="./styles.css" rel="stylesheet" />
     <script src="./scripts.js" defer></script>
   </head>
   <body>
-    <div id="container" class="container"></div>
+    <div class="container">
+      <button id="resizeButton" class="button">Reset the Grid!</button>
+      <div id="drawScreen" class="drawScreen"></div>
+    </div>
   </body>
 </html>
