Update validity checks for user input

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <button id="resizeButton" class="button">Reset the Grid!</button>
+      <div class="buttons">
+        <button id="resizeButton" class="button">Reset the Grid!</button>
+      </div>
       <div id="drawScreen" class="drawScreen"></div>
     </div>
   </body>
