--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <div class="container">
       <div class="buttons">
         <button id="resizeButton" class="button">Reset the Grid!</button>
+        <button id="drawButton" class="button">Draw Mode</button>
+        <button class="button" id="eraseButton">Erase Mode</button>
       </div>
       <div id="drawScreen" class="drawScreen"></div>
     </div>
