--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <div class="buttons">
         <button id="resizeButton" class="button">Reset the Grid!</button>
         <button id="drawButton" class="button">Draw Mode</button>
-        <button class="button" id="eraseButton">Erase Mode</button>
+        <button id="eraseButton" class="button">Erase Mode</button>
+        <button id="shadeButton" class="button">Shade Mode</button>
+        <button id="lightenButton" class="button">Lighten Mode</button>
       </div>
       <div id="drawScreen" class="drawScreen"></div>
     </div>
