--- a/index.html
+++ b/index.html
@@ -3,19 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <title>Etch-a-Sketch</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
+      rel="stylesheet"
+    />
     <link href="./styles.css" rel="stylesheet" />
     <script src="./scripts.js" defer></script>
   </head>
   <body>
-    <div class="container">
-      <div class="buttons">
-        <button id="resizeButton" class="button">Reset the Grid!</button>
-        <button id="drawButton" class="button">Draw Mode</button>
-        <button id="eraseButton" class="button">Erase Mode</button>
-        <button id="shadeButton" class="button">Shade Mode</button>
-        <button id="lightenButton" class="button">Lighten Mode</button>
+    <header></header>
+    <main class="main">
+      <div class="container-wrapper">
+        <div class="container">
+          <div class="buttons-container">
+            <button id="resizeButton" class="button">Reset the Grid!</button>
+            <button id="drawButton" class="button tool-button">
+              Draw Mode
+            </button>
+            <button id="eraseButton" class="button tool-button">
+              Erase Mode
+            </button>
+            <button id="shadeButton" class="button tool-button">
+              Shade Mode
+            </button>
+            <button id="lightenButton" class="button tool-button">
+              Lighten Mode
+            </button>
+            <button id="toggleGrid" class="button">Show Grid</button>
+          </div>
+          <div id="drawScreen" class="drawScreen"></div>
+        </div>
       </div>
-      <div id="drawScreen" class="drawScreen"></div>
-    </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
