--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
       <div class="container-wrapper">
         <div class="container">
           <div class="buttons-container">
+            <div class="input-container">
+              <label for="pixelSize">Pixels per side:</label>
+              <input
+                type="text"
+                id="pixelSize"
+                size="4"
+                value="16"
+                inputmode="numeric"
+              />
+            </div>
             <button id="resizeButton" class="button">Reset the Grid!</button>
             <button id="drawButton" class="button tool-button">Draw Mode</button>
             <button id="eraseButton" class="button tool-button">Erase Mode</button>
