Add color selection feature
This commit updates the interface so that the user can now use a
color-picker input to change the current color of the brush. The browser
is pretty much in control of the UI behavior for this, but I did style
the input and label to fit in with the rest of the site.

--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
       <div class="container-wrapper">
         <div class="container">
           <div class="buttons-container">
+            <div class="color-container">
+              <label for="changeColor">Change the color:</label>
+              <input id="changeColor" type="color" />
+            </div>
             <div class="input-container">
               <label for="pixelSize">Pixels per side:</label>
-              <input
-                type="text"
-                id="pixelSize"
-                size="4"
-                value="16"
-                inputmode="numeric"
-              />
+              <input id="pixelSize" type="text" size="4" value="16" inputmode="numeric" />
             </div>
             <button id="resizeButton" class="button">Reset the Grid!</button>
             <button id="drawButton" class="button tool-button">Draw Mode</button>
